--- a/style/index.css
+++ b/style/index.css
@@ -2,8 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
-html, body, div, span, applet, object, iframe,
+hhtml, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -36,7 +35,12 @@ footer, header, hgroup, menu, nav, section {
     width: 80vw
   }
   section.top-content{
-    width: 80vw
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
   }
   section.bottom-content{
     width: 80vw;
