--- a/style/index.css
+++ b/style/index.css
@@ -2,6 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+
 hhtml, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -46,7 +47,7 @@ footer, header, hgroup, menu, nav, section {
     width: 80vw;
   }
   footer nav{
-    with: 80vw;
+    width: 80vw;
   }
   img.big{
     width: 80vw;
@@ -60,20 +61,16 @@ footer, header, hgroup, menu, nav, section {
   
 }
 
-@media(max-width: 500px) {
-  html{}
-  }
-header: {
+header {
   margin: 50px;
   width: 100%;
-  hight: 100%;
+  height: 100%;
 }
 header nav{
   margin: 50px;
   text-align: center;
   color: black;
   display: flex;
-  justify-content: center;
   justify-content:space-between;
 }
 img.big{
